--- a/ecommerce/.gitignore
+++ b/ecommerce/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/target/
 
 ### STS ###
 .apt_generated
@@ -13,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+!.idea
 *.iws
 *.iml
 *.ipr
